shopping-cart fixed scrollbar moving page

--- a/shopping-cart/src/index.css
+++ b/shopping-cart/src/index.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 html, body {
   width: 100%;
   height: 100%;
